observabilidade/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gds-observabilidade
  labels:
    name: gds-observabilidade
    app: gds-observabilidade
